<resources>
    <string name="app_name">PC-Hospital</string>
    <string name="nav_about">About</string>
    <string name="nav_language">Change Language</string>
    <string name="label_main_ticket_num">Tickets</string>
    <string name="label_main_active_staff">Active Staff</string>
    <string name="label_main_more">More......</string>

    <string name="nav_home">Home</string>
    <string name="title_about">About</string>
    <string name="app_version" translatable="false">Build 28</string>
    <string name="title_your_ticket">Your Ticket</string>
    <string name="title_login">Sign in</string>
    <string name="label_login_phone">Phone Number</string>
    <string name="button_login_login_or_register">Sign in or Sign up</string>
    <string name="hint_login_phone_number">Phone Number…</string>
    <string name="hint_login_name">Name</string>
    <string name="hint_add_ticket_name">What\'s your name?</string>
    <string name="hint_add_ticket_phone">How to contact you?</string>
    <string name="hint_add_ticket_Location">Where to find you?</string>
    <string name="hint_add_ticket_note">What happened?</string>
    <string name="button_add_ticket_send">Send</string>
    <string name="title_add_ticket">New Ticket</string>
    <string name="button_add_ticket_add_location">Add Location</string>
    <string name="error_login_name_too_long">Name could not be more than 40 characters</string>
    <string name="error_login_invalid_phone_number">Invalid phone number</string>
    <string name="states_login_signing_in">Working…</string>
    <string name="toast_login_failed">Can\'t connect to server</string>
    <string name="toast_ticket_need_login">Please login first</string>
    <string name="app_network_server_ip" translatable="false">123.206.201.200</string>
    <string name="app_local_user_profile_filename" translatable="false">userProfile</string>
    <string name="app_network_login_page" translatable="false">login.jsp</string>
    <string name="app_db_user_uid" translatable="false">uid</string>
    <string name="app_db_user_uname" translatable="false">uname</string>
    <string name="app_db_user_uphone" translatable="false">uphone</string>
    <string name="button_login_language">Change Language</string>
    <string name="error_login_no_name">Required Field</string>
    <string name="app_intent_extra_login_language" translatable="false">Change Language</string>
    <string name="app_intent_extra_login" translatable="false">Extra From Login</string>
    <string name="app_intent_extra_login_back" translatable="false">Login cancel</string>
    <string name="descriptions_nav_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="settings_screens_user_settings">Contacts</string>
    <string name="settings_items_user_name">Name</string>
    <string name="settings_items_user_phone">Phone Number</string>
    <string name="settings_default_values_null" translatable="false">null</string>
    <string name="settings_summaries_user_settings">Change default name and phone number</string>
    <string name="settings_categories_general">General</string>
    <string name="app_db_push_enabled" translatable="false">push_enabled</string>
    <string name="settings_items_push_enabled">Push notification</string>
    <string name="settings_items_change_user">Change User</string>
    <string name="settings_items_uid">User ID</string>
    <string name="app_intent_extra_settings" translatable="false">Extra From Settings</string>
    <string name="app_intent_extra_settings_no_change_language_button" translatable="false">Do Not Change Language</string>
    <string name="app_db_language" translatable="false">language</string>
    <string name="settings_items_language">Language</string>
    <string name="app_locale">English</string>
    <string name="title_dialog_change_user_info">Uploading new information</string>
    <string name="app_network_change_name_page" translatable="false">changeName.jsp</string>
    <string name="toast_settings_user_info_update_successfully">New contacts has been applied</string>
    <string name="toast_settings_user_info_update_failed">Update contacts failed, check your Internet</string>
    <string name="app_network_change_phone_page" translatable="false">changePhone.jsp</string>
    <string name="label_ticket_uploading">Uploading</string>
    <string name="label_ticket_uploaded">Sent!</string>
    <string name="label_ticket_unread">Unread</string>
    <string name="label_ticket_noticed">Noticed</string>
    <string name="label_ticket_accepted">Accepted</string>
    <string name="label_ticket_complete">Complete</string>
    <string name="label_ticket_canceled">Canceled</string>
    <string name="label_ticket_upload_failed">Upload failed</string>
    <string name="app_ticket_states_uploading" translatable="false">uploading</string>
    <string name="app_ticket_states_uploaded" translatable="false">uploaded</string>
    <string name="app_ticket_states_unread" translatable="false">unread</string>
    <string name="app_ticket_states_noticed" translatable="false">noticed</string>
    <string name="app_ticket_states_accepted" translatable="false">accepted</string>
    <string name="app_ticket_states_complete" translatable="false">complete</string>
    <string name="app_ticket_states_canceled" translatable="false">canceled</string>
    <string name="app_ticket_states_failed" translatable="false">failed</string>
    <string name="app_network_query_cards" translatable="false">queryCards.jsp</string>
    <string name="label_main_no_cards_title">Nothing there</string>
    <string name="label_main_no_card_content">Press \'+\' to add a ticket</string>
    <string name="toast_add_ticket_no_gps">Can\'t get your location</string>
    <string name="button_add_ticket_finding_location">finding your location</string>
    <string name="error_add_ticket_no_name">Requird Field</string>
    <string name="error_add_ticket_invalid_phone_number">Invalid Phone Number</string>
    <string name="app_db_ticket_name" translatable="false">tname</string>
    <string name="app_db_ticket_phone" translatable="false">tphone</string>
    <string name="app_db_ticket_location" translatable="false">tlocation</string>
    <string name="app_db_ticket_location_lo" translatable="false">tlocationLo</string>
    <string name="app_db_ticket_location_la" translatable="false">tlocationLa</string>
    <string name="app_db_ticket_note" translatable="false">tnote</string>
    <string name="app_db_ticket_state" translatable="false">tstates</string>
    <string name="app_db_ticket_uid" translatable="false">uid</string>
    <string name="app_db_ticket_date" translatable="false">tdate</string>
    <string name="app_network_push_ticket_page" translatable="false">addTicket.jsp</string>
    <string name="toast_add_ticket_success">Send ticket successfully</string>
    <string name="toast_add_ticket_failed">Send ticket failed</string>
    <string name="button_add_ticket_pushing_ticket">Sending</string>
    <string name="error_add_ticket_location_too_long">Location should be no more than 80 characters</string>
    <string name="error_add_ticket_no_location">Required Field</string>
    <string name="error_add_ticket_note_too_long">Note should be no more than 260 characters</string>
    <string name="label_ticket_detail_contacts">Contacts</string>
    <string name="label_ticket_detail_latest_update">Latest Update:</string>
    <string name="label_ticket_detail_Notes">Notes</string>
    <string name="label_ticket_detail_name">Name</string>
    <string name="label_ticket_detail_phone_number">Phone</string>
    <string name="label_ticket_detail_location">Location</string>
    <string name="app_network_pull_ticket_page" translatable="false">queryTicket.jsp</string>
    <string name="app_db_ticket_tid" translatable="false">tid</string>
    <string name="app_db_ticket_sid" translatable="false">sid</string>
    <string name="toast_ticket_detail_refresh_failed">Refresh Failed</string>
    <string name="title_ticket_detail">Ticket Detail</string>
    <string name="label_ticket_detail_states">State</string>
    <string name="toast_ticket_detail_copy_to_clipboard_successfully">Copied to clipboard</string>
    <string name="title_navigation_to">Location Detail</string>
    <string name="label_add_ticket_add_photo">Add a photo?</string>
    <string name="dialog_pick_photo_source_content">Photo source</string>
    <string name="dialog_pick_source_camera">From camera</string>
    <string name="dialog_pick_source_album">From album</string>
    <string name="dialog_delete_photo">Delete?</string>
    <string name="dialog_delete_photo_ok">Delete</string>
    <string name="dialog_delete_photo_cancel">Cancel</string>
    <string name="dialog_upload_image_uploading">Uploading images</string>
    <string name="app_network_add_picture_page" translatable="false">addPicture.jsp</string>
    <string name="app_db_picture_tid" translatable="false">tid</string>
    <string name="app_db_picture_url" translatable="false">url</string>
    <string name="label_ticket_detail_photo_card">Photo</string>
    <string name="title_picture_detail">Picture Detail</string>
</resources>
