<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cc.pchospital.app.TicketDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/detail_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <GridLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="5">
                <android.support.v7.widget.CardView
                    android:id="@+id/detail_state_card"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/card_normal_padding">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_ticket_detail_states"
                            android:textSize="@dimen/ticket_detail_form_title" />
                        <TextView
                            android:id="@+id/detail_state"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAlignment="center"
                            android:textSize="@dimen/ticket_detail_leading_text"
                            android:textColor="@android:color/white"/>
                        <TextView
                            android:id="@+id/detail_latest_update"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/ticket_detail_form_text"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/detail_contacts_card"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_margin="@dimen/card_normal_padding"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_ticket_detail_contacts"
                            android:textSize="@dimen/ticket_detail_form_title"/>
                        <TextView
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:id="@+id/detail_name"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/icon_person_black_24dp"
                            android:drawableLeft="@drawable/icon_person_black_24dp"
                            android:textSize="@dimen/ticket_detail_form_text"
                            android:textColor="@android:color/black"/>
                        <TextView
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:id="@+id/detail_phone_number"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/icon_smartphone_black_24dp"
                            android:drawableStart="@drawable/icon_smartphone_black_24dp"
                            android:textSize="@dimen/ticket_detail_form_text"
                            android:textColor="@android:color/black"/>
                        <Button
                            style="@style/Widget.AppCompat.Button.Borderless.Colored"
                            android:id="@+id/detail_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/icon_location_black_24dp"
                            android:drawableLeft="@drawable/icon_location_black_24dp"
                            android:textSize="@dimen/ticket_detail_form_text"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/notes_card"
                    android:layout_margin="@dimen/card_margin"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_margin="@dimen/card_normal_padding"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/label_ticket_detail_Notes"
                            android:textSize="@dimen/ticket_detail_form_title"/>
                        <TextView
                            android:id="@+id/detail_notes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minLines="3"
                            android:textSize="@dimen/ticket_detail_form_text"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </GridLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.design.widget.CoordinatorLayout>
